<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.paperplanes.flagsquiz.activity.HelpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_1"
                android:layout_marginBottom="@dimen/common_padding_1"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_play_text"
                android:textStyle="bold"
                android:text="@string/help"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_padding_0"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/hint"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/common_padding_1"
                android:layout_marginBottom="@dimen/common_padding_1"
                android:background="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_padding_1"
                android:textColor="@android:color/white"
                android:text="@string/hint_info"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_2"
                android:orientation="horizontal"
                android:padding="@dimen/common_padding_1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/common_padding_1"
                    android:src="@drawable/ic_world"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/help_hint_continent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_padding_0"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/help_coin_size"
                            android:layout_height="@dimen/help_coin_size"
                            android:layout_marginRight="@dimen/common_padding_0"
                            android:src="@drawable/ic_coin"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="@android:color/white"
                            android:text="@string/hint_continent_cost"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_2"
                android:orientation="horizontal"
                android:padding="@dimen/common_padding_1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/common_padding_1"
                    android:src="@drawable/ic_half"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/help_hint_half"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_padding_0"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/help_coin_size"
                            android:layout_height="@dimen/help_coin_size"
                            android:layout_marginRight="@dimen/common_padding_0"
                            android:src="@drawable/ic_coin"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="@android:color/white"
                            android:text="@string/hint_half_cost"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_2"
                android:orientation="horizontal"
                android:padding="@dimen/common_padding_1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/common_padding_1"
                    android:src="@drawable/ic_full_answer"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/help_hint_full"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_padding_0"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/help_coin_size"
                            android:layout_height="@dimen/help_coin_size"
                            android:layout_marginRight="@dimen/common_padding_0"
                            android:src="@drawable/ic_coin"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="@android:color/white"
                            android:text="@string/hint_full_cost"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
